Finished the header

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
     <header>
         <div class="profile">
             <img src="./image/mynhha foto.jpg" alt="Minha Foto">
+            <div class="email">
+              <a href="mailto:igorvguedesoliveira@gmail.com">
+                 <span>igorvguedesoliveira@gmail.com</span></a> 
+            </div>
         </div>
         <nav class="menu">
-            <a href="#home" class="active">Home</a>
+            <a href="#home" class="">Home</a>
             <a href="#experiences">Experiences</a>
             <a href="#contact">Contact</a>
         </nav>
