add more main page and fixed something in the header

--- a/index.html
+++ b/index.html
@@ -21,5 +21,20 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
+
+    <main>
+        <div class="tooltip-container">
+            <!-- Tooltip -->
+            <div class="tooltip">
+                It's me
+            </div>
+
+            <!-- Texto Principal -->
+            <h1>HEY, I'M IGOR OLIVEIRA</h1>
+            <p>
+                A student aspiring to become an incredible developer, committed to learning and creating new things.
+            </p>
+        </div>
+    </main>
 </body>
 </html>
