--- a/index.html
+++ b/index.html
@@ -79,5 +79,13 @@
         </div>
     </div>
 </section>
+<section class="experiences">
+    <h2>Experiences</h2>
+    <p class="under-construction">Under construction</p>
+    <div class="gif-container">
+        <img src="./image/75rk.gif" alt="Construction GIF">
+    </div>
+</section>
+
 </body>
 </html>
