--- a/index.html
+++ b/index.html
@@ -1,27 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Final Project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
     <header>
         <div class="profile image-with-dropdown">
             <img src="./image/mynhha foto.jpg" alt="Minha Foto" class="toggle-image" tabindex="0">
             <div class="dropdown">
-                <a href="https://linkedin.com" target="_blank">LinkedIn</a>
-                <a href="https://twitter.com" target="_blank">Twitter</a>
-                <a href="https://youtube.com" target="_blank">YouTube</a>
-                <a href="https://github.com" target="_blank">GitHub</a>
+                <a href="https://wa.me/12368339824" target="_blank"><img src="./image/whats.png" alt="whats"
+                        style="height: 30px; width: 30px;"></a>
+                <a href="" target="_blank"><img src="./image/twitter.png" alt="twitter"></a>
+                <a href="https://github.com/Norm4l-Igor" target="_blank"><img src="./image/github.png" alt="GitHub"></a>
+                <a href=""><img src="./image/linkedin final projec.png" alt="linkedin"></a>
             </div>
         </div>
-            <div class="email">
-              <a href="mailto:igorvguedesoliveira@gmail.com">
-                 <span>igorvguedesoliveira@gmail.com</span></a> 
-            </div>
-            </div>
+        <div class="email">
+            <a href="mailto:igorvguedesoliveira@gmail.com">
+                <span>igorvguedesoliveira@gmail.com</span></a>
+        </div>
+        </div>
         <nav class="menu">
             <a href="#home" class="">Home</a>
             <a href="#about">About</a>
@@ -30,62 +33,67 @@
         </nav>
     </header>
 
-    <main>
+    <main id="home">
         <section>
-        <div class="main-content">
-            <img src="./image/clique aqui.png" alt="Clique Aqui" class="new-image">
+            <div class="main-content">
+                <img src="./image/clique aqui.png" alt="Clique Aqui" class="new-image">
             </div>
 
-        <div class="tooltip-container">
-            <!-- Tooltip -->
-            <div class="tooltip">
-                It's me
-            </div>
+            <div class="tooltip-container">
+                <!-- Tooltip -->
+                <div class="tooltip">
+                    It's me
+                </div>
 
-            <!-- Texto Principal -->
-            <h1>HEY, I'M IGOR OLIVEIRA</h1>
-            <p>
-                A student aspiring to become an incredible developer, committed to learning and creating new things.
-            </p>
-        </div>
+                <!-- Texto Principal -->
+                <h1>HEY, I'M IGOR OLIVEIRA</h1>
+                <p>
+                    A student aspiring to become an incredible developer, committed to learning and creating new things.
+                </p>
+            </div>
 
     </main>
-</section>
-<section class="about-me">
-    <h2>About Me</h2>
-    <p class="intro">Here is where you will find a little more about me.</p>
-    <div class="content">
-        <div class="left">
-            <h3>Get to know me!</h3>
-            <p>
-                I am a Frontend student with a focus on entering the technology field. I am currently studying in Canada.
-            </p>
-            <p>
-                I also love learning and taking on challenges. Whatever you have for me, I will dive in headfirst. I am 19 years old and learn things quickly.
-            </p>
-            <p>
-                I know I don't have much experience, but I am always open to any opportunities that come my way.
-            </p>
-        </div>
-        <div class="right">
-            <h3>My Skills</h3>
-            <div class="skills">
-                <span>HTML</span>
-                <span>CSS</span>
-                <span>PHP</span>
-                <span>GitHub</span>
-                <span>Responsive Design</span>
+    </section>
+
+    <section id="about" class="about-me">
+
+        <h2>About Me</h2>
+        <p class="intro">Here is where you will find a little more about me.</p>
+        <div class="content">
+            <div class="left">
+                <h3>Get to know me!</h3>
+                <p>
+                    I am a Frontend student with a focus on entering the technology field. I am currently studying in
+                    Canada.
+                </p>
+                <p>
+                    I also love learning and taking on challenges. Whatever you have for me, I will dive in headfirst. I
+                    am 19 years old and learn things quickly.
+                </p>
+                <p>
+                    I know I don't have much experience, but I am always open to any opportunities that come my way.
+                </p>
+            </div>
+            <div class="right">
+                <h3>My Skills</h3>
+                <div class="skills">
+                    <span>HTML</span>
+                    <span>CSS</span>
+                    <span>PHP</span>
+                    <span>GitHub</span>
+                    <span>Responsive Design</span>
+                </div>
             </div>
         </div>
-    </div>
-</section>
-<section class="experiences">
-    <h2>Experiences</h2>
-    <p class="under-construction">Under construction</p>
-    <div class="gif-container">
-        <img src="./image/75rk.gif" alt="Construction GIF">
-    </div>
-</section>
+    </section>
+    <section class="experiences" id="experiences">
+        <h2>Experiences</h2>
+        <p class="under-construction">Under construction</p>
+        <div class="gif-container">
+            <img src="./image/75rk.gif" alt="Construction GIF">
+        </div>
+    </section>
 
 </body>
+
 </html>
